name:                HBPF
version:             0.1.0.0
synopsis:            Haskell eDSL for writing BPF filters
description:         Please see README.md
homepage:            http://github.com/andreweduffy/hBPF#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Duffy
maintainer:          agd@cs.stanford.edu
copyright:           2016 Andrew Duffy
category:            DSL
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      ., HBPF
  exposed-modules:     HBPF
  other-modules:       HBPF.Internal
                     , HBPF.Filter
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       MissingH


executable HBPFExample
  hs-source-dirs:      app
  other-modules:       IpTcpDns
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       HBPF
                     , base >= 4.8 && < 5
